# langserve-template

./: .env_sample  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
app/: api.md  chain.py  chat.py  config.py  database.py  prompts.py  server.py  utils.py
app/old/: chain_20240626.py  server_20240621.py  server_20240621_2.py
app/rag/: chain_rag.py  retrieve_vectordb.py
data/: norway.txt
example/: 01-remote-invoke.ipynb  temp.json  test_contextManager.py  test_langchain.ipynb  test_text_rag.ipynb
tools/: test_text_rag.py  upload_vectordb.py  upload_vectordb_chroma_old.py
vectordb/mycollec/: index.faiss  index.pkl
